crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__broken-link.json.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: json_output
---
{
  "schema_version": 1,
  "tool_version": "0.1.0",
  "repo": {
    "name": "broken-link"
  },
  "nodes": [
    {
      "id": "crate:engine",
      "kind": "crate",
      "title": "engine",
      "summary": null,
      "paths": [
        {
          "pattern": "crates\\engine"
        }
      ],
      "attrs": {
        "manifest_path": "crates/engine/Cargo.toml",
        "version": "0.1.0"
      },
      "provenance": {
        "source": "Cargo.toml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "id": "scen:broken",
      "kind": "scenario",
      "title": "Broken command reference",
      "summary": null,
      "paths": [],
      "attrs": {},
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    }
  ],
  "edges": [],
  "diagnostics": [
    {
      "code": "scenario_missing_command",
      "severity": "error",
      "message": "scenario `scen:broken` does not declare a proving command",
      "subject": "scen:broken",
      "location": {
        "path": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null
      }
    },
    {
      "code": "scenario_missing_crate",
      "severity": "error",
      "message": "scenario `scen:broken` does not declare an exercised crate",
      "subject": "scen:broken",
      "location": {
        "path": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null
      }
    },
    {
      "code": "command_referenced_but_undeclared",
      "severity": "error",
      "message": "edge `scen:broken` -> `cmd:missing` references missing target node `cmd:missing`",
      "subject": "cmd:missing",
      "location": {
        "path": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null
      }
    }
  ],
  "metrics": {
    "node_count": 2,
    "edge_count": 0,
    "diagnostic_count": 3,
    "error_count": 3,
    "warning_count": 0
  }
}
