crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__broken-link.md.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: md_output
---
# Atlas: broken-link

## Summary

- Schema version: `1`
- Tool version: `0.1.0`
- Nodes: `2`
- Edges: `0`
- Diagnostics: `3` (errors: `3`, warnings: `0`)

## Nodes by kind

### scenario

- `scen:broken` — Broken command reference
  - Source: `atlas\example.atlas.yaml`

### crate

- `crate:engine` — engine
  - Source: `Cargo.toml`
  - Paths: `crates\engine`

## Edges


## Diagnostics

- [error] `scenario_missing_command` — scenario `scen:broken` does not declare a proving command
  - Subject: `scen:broken`
  - Location: `atlas\example.atlas.yaml`
- [error] `scenario_missing_crate` — scenario `scen:broken` does not declare an exercised crate
  - Subject: `scen:broken`
  - Location: `atlas\example.atlas.yaml`
- [error] `command_referenced_but_undeclared` — edge `scen:broken` -> `cmd:missing` references missing target node `cmd:missing`
  - Subject: `cmd:missing`
  - Location: `atlas\example.atlas.yaml`
