crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__impact-packet.md.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: packet
---
# 📦 Atlas Review Packet

This packet summarizes what changed, what surface is impacted, and what proof evidence is missing.

## 📈 Impact Summary

- Changed paths: `1`
- Uncovered paths: `0`
- Impacted nodes: `5`
- Owners linked: `0`
- Missing evidence: `0`
- Scope warnings: `0`
- Estimated coverage: `100%`

## 🎯 Why this matters

- Behavioral requirements: `req:example`
- Behavioral scenarios: `scen:example-build`

## 📂 Changed Paths

- `crates/engine/src/lib.rs`

## 👤 Owners

_No owners linked to current impact._

## 👥 Ownership by Path

- `crates/engine/src/lib.rs`: _No owners linked to this path_

## 🧭 Impacted Truth Surface

### Roadmaps / Proposals / Specs / ADRs / Plans / Goals

_None_

### Requirements / Scenarios / Closeouts

- `req:example` (requirement) — Example requirement
  - reason: `related to \`scen:example-build\` via \`proves\``
- `scen:example-build` (scenario) — Example build
  - reason: `matches changed path \`crates/engine/src/lib.rs\``

### Policy / Support / Claims

_None_

### Proof Commands

- `cmd:ci-fast` (command) — Fast CI
  - reason: `related to \`scen:example-build\` via \`runs_with\``

### Artifacts / Infra

- `artifact:example-report` (artifact) — Example report
  - reason: `related to \`scen:example-build\` via \`emits\``
- `crate:engine` (crate) — engine
  - reason: `related to \`scen:example-build\` via \`exercises\``

## 🧪 Proof Commands to Run

- `cmd:ci-fast` — Fast CI (related to `scen:example-build` via `runs_with`)

## ⚠️ Missing Evidence

_No immediate missing-evidence diagnostics for impacted nodes._

## ⚠️ Scope Warnings

_No extra scope warnings detected for this impact._

## ✅ Next Actions

_No follow-up metadata fixes are inferred from current diagnostics._

---
_Generated by atlasctl_
