crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__impact-summary.md.snap
---
source: crates/atlasctl-core/src/lib.rs
assertion_line: 4342
expression: summary
---
### 🎯 Atlas Impact Analysis

- **Schema version**: `1`
- **Impacted Behaviors**: `5`
- **Uncovered Changes**: `0`

#### 🧱 Impacted Proof Surface

- `artifact:example-report` (artifact) — Example report
- `cmd:ci-fast` (command) — Fast CI
- `crate:engine` (crate) — engine
- `req:example` (requirement) — Example requirement
- `scen:example-build` (scenario) — Example build
