crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__impact.json.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: json
---
{
  "schema_version": 1,
  "command": "impacted",
  "payload": {
    "impacted": [
      {
        "node": {
          "id": "artifact:example-report",
          "kind": "artifact",
          "role": "artifact",
          "title": "Example report",
          "summary": null,
          "owns": [],
          "touches": [],
          "attrs": {},
          "provenance": {
            "source": "atlas/example.atlas.yaml",
            "line": null,
            "column": null,
            "fragment": null
          }
        },
        "reason": "related to `scen:example-build` via `emits`",
        "owners": []
      },
      {
        "node": {
          "id": "cmd:ci-fast",
          "kind": "command",
          "role": "command",
          "title": "Fast CI",
          "summary": null,
          "owns": [],
          "touches": [],
          "attrs": {},
          "provenance": {
            "source": "atlas/example.atlas.yaml",
            "line": null,
            "column": null,
            "fragment": null
          }
        },
        "reason": "related to `scen:example-build` via `runs_with`",
        "owners": []
      },
      {
        "node": {
          "id": "crate:engine",
          "kind": "crate",
          "role": "infra",
          "title": "engine",
          "summary": null,
          "owns": [
            {
              "pattern": "crates/engine"
            }
          ],
          "touches": [],
          "attrs": {
            "manifest_path": "crates/engine/Cargo.toml",
            "version": "0.1.0"
          },
          "provenance": {
            "source": "Cargo.toml",
            "line": null,
            "column": null,
            "fragment": null
          }
        },
        "reason": "related to `scen:example-build` via `exercises`",
        "owners": []
      },
      {
        "node": {
          "id": "req:example",
          "kind": "requirement",
          "role": "behavior",
          "title": "Example requirement",
          "summary": null,
          "owns": [],
          "touches": [],
          "attrs": {},
          "provenance": {
            "source": "atlas/example.atlas.yaml",
            "line": null,
            "column": null,
            "fragment": null
          }
        },
        "reason": "related to `scen:example-build` via `proves`",
        "owners": []
      },
      {
        "node": {
          "id": "scen:example-build",
          "kind": "scenario",
          "role": "proof",
          "title": "Example build",
          "summary": null,
          "owns": [
            {
              "pattern": "crates/engine/src/lib.rs"
            }
          ],
          "touches": [],
          "attrs": {},
          "provenance": {
            "source": "atlas/example.atlas.yaml",
            "line": null,
            "column": null,
            "fragment": null
          }
        },
        "reason": "matches changed path `crates/engine/src/lib.rs`",
        "owners": []
      }
    ],
    "uncovered": [],
    "changed_paths": [
      {
        "path": "crates/engine/src/lib.rs",
        "owners": []
      }
    ],
    "metrics": {
      "changed_path_count": 1,
      "uncovered_path_count": 0,
      "impacted_node_count": 5,
      "owner_count": 0,
      "missing_evidence_count": 0,
      "scope_warning_count": 0,
      "touched_only_path_count": 0,
      "multi_owner_path_count": 0,
      "coverage_percent": 100
    },
    "missing_evidence": [],
    "scope_warnings": [],
    "suggested_fixes": []
  }
}
