crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__markdown-frontmatter.md.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: md_output
---
# Atlas: markdown-frontmatter

## Summary

- Schema version: `1`
- Tool version: `0.1.0`
- Nodes: `2`
- Edges: `0`
- Diagnostics: `2` (errors: `1`, warnings: `1`)

## Nodes by kind

### guide

- `guide:frontmatter-guide` — Frontmatter guide
  - Source: `docs/guide.md`
  - Owns: `docs/guide.md`

### crate

- `crate:engine` — engine
  - Source: `Cargo.toml`
  - Owns: `crates/engine`

## Edges


## Diagnostics

- [error] `broken_reference` — edge `guide:frontmatter-guide` -> `req:frontmatter` references missing target node `req:frontmatter`
  - Subject: `req:frontmatter`
  - Location: `docs/guide.md`
- [warning] `orphan_node` — node `guide:frontmatter-guide` has no relationships in the graph
  - Subject: `guide:frontmatter-guide`
  - Location: `docs/guide.md`
